--- a/new.html
+++ b/new.html
@@ -1,5 +1,5 @@
-<p>Excuse me</p>
-<p>I want be your boyfriend</p>
+<p>hello</p>
+<p>I want be your friend</p>
 <p>we are the family</p>
 <p>This is my a bit love</p>
 <style>
@@ -19,7 +19,7 @@
   
   <body>
     <h1>新的页面</h1>
-  <h1>hollo，world</h1>
+  <h1>hello，world</h1>
   <p>welcome to</p>
   
   </body>
