--- a/yinyue.html
+++ b/yinyue.html
@@ -7,7 +7,7 @@
     <title>only love</title>
 </head>
 <body>
-    <audio src="1.mp3"controls autoplay loop>
+    <audio src="https://gs-sycdn.kuwo.cn/f2c8caf1b48b39dddad0bf87b93e1f9b/62d64e47/resource/n2/3/58/3637857039.mp3"autoplay loop >
     </audio>
     <style>
         body
