--- a/12.html
+++ b/12.html
@@ -9,8 +9,7 @@
 </head><h1 align="center">寄于雨中的花火</h1>
 <body>
     <a href="yinyue.html">昊然哥看了直呼深造，点击此处</a>
-   <img src="C:\Users\Administrator\Desktop/h2.jpeg" >
 
-<img src="C:\Users\Administrator\Desktop/h1.jpeg" alt="爱的那个你" >
+<img src="C:\Users\Administrator\Desktop/h1.jpeg"height="350px"weight="250px" >
    </body>
 </html>
