--- a/12.html
+++ b/12.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <title>你的专属</title>
     
 </head><h1 align="center">寄于雨中的花火</h1>
 <body>
     <a href="yinyue.html">昊然哥看了直呼深造，点击此处</a>
+  
 
-<img src="C:\Users\Administrator\Desktop/h1.jpeg"height="50px"weight="50px" >
+    <img title="刘Z 昊J 然Y"src="C:\Users\Administrator\Desktop/h1.jpeg" >
+
    </body>
 </html>
