--- a/new.html
+++ b/new.html
@@ -18,8 +18,8 @@
   </head>
   
   <body>
-    <h1>新的页面</h1>
-  <h1>hello，world</h1>
+    <h1>谢佳乐</h1>
+  <h1>我爱你</h1>
   <p>welcome to</p>
   
   </body>
